--- a/manifest.json
+++ b/manifest.json
@@ -1,52 +1,19 @@
 {
-    "name": "Instagram Downloader",
-    "short_name": "IG Downloader",
-    "description": "A simple tool to download Instagram media.",
+    "name": "InstaGrab - Media Downloader",
+    "short_name": "InstaGrab",
+    "description": "Download Instagram videos and images easily. Paste the link and get your media instantly.",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#f5f7fa",
-    "theme_color": "#007bff",
+    "background_color": "#f4f7f6",
+    "theme_color": "#6a11cb",
     "icons": [
-        {
-            "src": "icons/icon-72x72.png",
-            "sizes": "72x72",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-96x96.png",
-            "sizes": "96x96",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-128x128.png",
-            "sizes": "128x128",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-144x144.png",
-            "sizes": "144x144",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-152x152.png",
-            "sizes": "152x152",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable any"
-        },
-        {
-            "src": "icons/icon-384x384.png",
-            "sizes": "384x384",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
+        { "src": "1747306537309.png", "sizes": "72x72", "type": "image/png" },
+        { "src": "1747306537309.png", "sizes": "96x96", "type": "image/png" },
+        { "src": "1747306537309.png", "sizes": "128x128", "type": "image/png" },
+        { "src": "1747306537309.png", "sizes": "144x144", "type": "image/png" },
+        { "src": "1747306537309.png", "sizes": "152x152", "type": "image/png" },
+        { "src": "1747306537309.png", "sizes": "192x192", "type": "image/png", "purpose": "maskable any" },
+        { "src": "1747306537309.png", "sizes": "384x384", "type": "image/png" },
+        { "src": "1747306537309.png", "sizes": "512x512", "type": "image/png" }
     ]
 }
